--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 </style>
 <!-- 	<script type="text/javascript" src="/api/socket.io/socket.io.js"></script> -->
 	<script type="text/javascript" src="phonegap.js"></script>
-	<script type="text/javascript" src="http://mturn.hp.af.cm/api/socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="library/socket.io.js"></script>
 	    <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script id="microloader" type="text/javascript" src="sdk/microloader/development.js"></script>
 </head>
