--- a/public/app.html
+++ b/public/app.html
@@ -71,6 +71,7 @@
     <script type="text/javascript" src="sdk/sencha-touch.js"></script>
 	<script type="text/javascript" src="cordova.js"></script>
 	<script type="text/javascript" src="library/socket.io.js"></script>
+    <script type="text/javascript" src="library/ui.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
