have to use node for socket.io.js, untested

--- a/public/app.html
+++ b/public/app.html
@@ -69,7 +69,7 @@
     <link rel="stylesheet" href="resources/css/app.css" type="text/css">
 
     <script type="text/javascript" src="sdk/sencha-touch.js"></script>
-    <script type="text/javascript" src="library/socket.io.js"></script>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="library/ui.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </head>
