--- a/public/app.html
+++ b/public/app.html
@@ -2,6 +2,8 @@
 <html manifest="" lang="en-US">
 <head>
     <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>My Turn</title>
     <style type="text/css">
          /**
