--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
   <html lang="en-US">
   <head>
       <meta charset="UTF-8">
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      <meta name="mobile-web-app-capable" content="yes">
       <style type="text/css">
       /* Splash screens for Web View */
       body {
